<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jarrash.mahmoud.moviefinder.MoviesActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/runtimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/runtime_txt"
        app:layout_constraintStart_toStartOf="@+id/titleAndYearTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleAndYearTxt" />

    <TextView
        android:id="@+id/titleAndYearTxt"

        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_txt"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ratingTxt"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/rating_txt"
        app:layout_constraintStart_toStartOf="@+id/boxOfficeTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/posterImg"
        android:layout_width="198dp"
        android:layout_height="277dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runtimeTxt"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/urlTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/url_txt"
        android:textColor="#1100f3"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posterImg" />

    <TextView
        android:id="@+id/boxOfficeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/boxoffice_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ratingTxt" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</android.support.constraint.ConstraintLayout>
